deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: produto-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: produto-api
  template:
    metadata:
      labels:
        app: produto-api
    spec:
      containers:
      - name: produto-api
      - name: produto-api
        image: paulomauri/produto-api:1.0 # Substitua pelo nome da sua imagem -- image: produto-api:latest
        imagePullPolicy: Always # porque é uma imagem remota -- imagePullPolicy: Never # porque é uma imagem local
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: produto-api-service
spec:
  selector:
    app: produto-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
  type: LoadBalancer
